# world-models-eval

./: .gitignore  CITATION.cff  HANDOFF.md  IMPLEMENTATION_GUIDE.md  LIMITATIONS.md  README.md  RUNBOOK.md  RUN_LOG.md  TYPE2_READY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: compute.yaml  norm_stats.json  splits.json
configs/policy/: smolvla_libero.yaml  smolvla_tiny.yaml
configs/world_model/: tier_1.yaml  tier_2.yaml  tier_3.yaml  tier_4.yaml  tier_5.yaml  tiny.yaml
docs/: datasets.md  failures.md  macos.md  release_approvals.md
dreamgrasp/data/: convert_libero.py  loader.py  stats.py
dreamgrasp/eval/: acceptance.py  correlate.py  dream_eval.py  metrics.py  sim_eval.py  success_classifier.py
dreamgrasp/policy/: train.py
dreamgrasp/utils/: device.py  paths.py  seeding.py  video.py
dreamgrasp/world_model/: dynamics.py  fidelity.py  train.py  vae.py
notebooks/: analysis.ipynb
report/: report.md
scripts/: compare_wm_rollouts.py  dream_eval.sh  make_gif.py  reproduce.sh  run_study.sh  run_t26_heldout.sh  run_t26_horizon100.sh  run_t2_2_sim_eval.sh  setup_libero.sh  sim_eval.sh  smoke_test.py  train_policy.sh  train_wm_tier.sh
space/: app.py
tests/: test_acceptance.py  test_correlate.py  test_data.py  test_no_cuda_literals.py  test_norm.py  test_shapes.py  test_splits.py
