[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-models-eval"
version = "0.1.0"
description = "How good must a learned world model be before you can trust it to evaluate robot policies?"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    # Torch: install per-platform first (arm64 wheels on macOS; cu121 index on Linux)
    "torch==2.10.0",
    "torchvision==0.25.0",
    "lerobot[smolvla]==0.4.4",
    # Sim stack — robosuite 1.4.1 requires mujoco 2.3.x (mj_fullM API changed in 3.x)
    "mujoco==2.3.7",
    "robosuite==1.4.1",
    "bddl==1.0.1",
    "future==1.0.0",
    "gym==0.26.2",
    "easydict==1.13",
    "matplotlib==3.10.9",
    # Data / logging / analysis
    "h5py==3.16.0",
    "imageio==2.37.3",
    "imageio-ffmpeg==0.6.0",
    "wandb==0.24.2",
    "hydra-core==1.3.3",
    "einops==0.8.2",
    "webdataset==1.0.2",
    "huggingface_hub==0.35.3",
    "diffusers==0.35.2",
    "pandas==2.3.3",
    "pyarrow==24.0.0",
    "scipy==1.15.3",
    "plotly==6.8.0",
    "gradio==4.44.1",
    "lpips==0.1.4",
]
# NOTE: LIBERO is vendored at third_party/LIBERO and must be installed with:
#   pip install -e ./third_party/LIBERO --config-settings editable_mode=compat --no-deps
# (its repo layout needs legacy editable mode; see docs/macos.md)

[project.optional-dependencies]
dev = ["ruff==0.15.20", "mypy==2.1.0", "pytest==9.1.1"]
# CUDA-only extras (Type 2, optional): guarded at import time, never in core deps
cuda = []

[tool.setuptools.packages.find]
include = ["dreamgrasp*"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["third_party", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["third_party/", "build/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
